# FlowZint-AI-Hackathon-2026

./: .env.example  .gitignore  README.md  package-lock.json  package.json  preview.html
backend/: README.md  pyproject.toml
backend/app/: __init__.py  main.py
backend/app/api/: __init__.py
backend/app/api/v1/: health.py  router.py
backend/app/core/: __init__.py
backend/app/core/config/: __init__.py  settings.py
backend/app/schemas/common/: __init__.py  health.py
backend/app/services/: system.py
docker/: README.md  backend.Dockerfile  frontend.Dockerfile
docs/: api-design.md  architecture.md  contributing.md  deployment.md  er-diagram.md  folder-structure.md
frontend/: README.md  package.json  tailwind.config.ts  tsconfig.json
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/api/chat/: route.ts
frontend/src/app/api/dashboard/: route.ts
frontend/src/lib/: demo-data.ts  mock-api.ts
infra/: README.md  docker-compose.yml
scripts/: README.md  dev.ps1  start-preview.cmd  static-preview-server.mjs
shared/: README.md
shared/python/: README.md
shared/typescript/: package.json  tsconfig.json
shared/typescript/contracts/: api.ts
shared/typescript/enums/: roles.ts  signals.ts
shared/typescript/src/: index.ts
shared/typescript/utils/: request-id.ts
tests/: README.md
