[project]
name = "echotwin-backend"
version = "0.1.0"
description = "FastAPI backend for EchoTwin AI"
requires-python = ">=3.12"
dependencies = [
  "alembic>=1.14.0",
  "asyncpg>=0.30.0",
  "bcrypt>=4.2.1",
  "chromadb>=0.5.20",
  "fastapi>=0.115.5",
  "httpx>=0.27.2",
  "langchain>=0.3.7",
  "langgraph>=0.2.48",
  "pydantic>=2.9.2",
  "pydantic-settings>=2.6.1",
  "python-jose[cryptography]>=3.3.0",
  "python-multipart>=0.0.17",
  "redis>=5.2.0",
  "sentence-transformers>=3.3.1",
  "sqlalchemy>=2.0.36",
  "supabase>=2.10.0",
  "uvicorn[standard]>=0.32.0"
]

[project.optional-dependencies]
dev = [
  "mypy>=1.13.0",
  "pytest>=8.3.3",
  "pytest-asyncio>=0.24.0",
  "ruff>=0.7.4"
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.mypy]
python_version = "3.12"
strict = true

